[package]
name = "devforge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
iced = { version = "0.13", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
